# vulntriage

./: .dockerignore  .gitignore  PROJECT.md  README.md  main.py  pyproject.toml  todo.txt
data/: assets.yaml  cve_kb.json  eval_config.example.json  nuclei_scan_1782570667.jsonl  openvas_sample.csv  sample_nmap.xml  sample_nuclei.jsonl  synthetic_findings.json
data/templates/: report.html
docker/: Dockerfile  compose.yaml
docker/nmap/: Dockerfile
docker/nuclei/: Dockerfile
docker/vuln-lab/: compose.yaml
docs/: THESIS_WRITEUP.md
docs/plans/: 2026-06-30-triage-pipeline-v2-plan.md  triage-pipeline-v2-plan.md
docs/specs/: 2026-06-26-triage-pipeline-design.md  2026-06-30-triage-pipeline-v2-design.md  ensemble-and-model-picker-design.md  triage-pipeline-v2-design.md  webapp-design.md
docs/superpowers/specs/: 2026-06-26-triage-pipeline-design.md
output/: synthetic.txt
output/eval/20260709-194332-2c9f1b/: metrics.json  results.csv
output/runs/20260704-125831/: report.html
output/runs/20260705-165831/: report.html
output/runs/20260709-182536/: upload_1_nuclei_scan_1782570805.jsonl
output/runs/20260709-182536-b5c912/: report.html
output/runs/20260709-212326-62161f/: report.html
src/vulntriage/: __init__.py  cli.py  enricher.py  evaluation.py  json_utils.py  llm.py  models.py  parser.py  pipeline.py  prioritizer.py  remediator.py  report_composer.py  reporter.py  scanner.py  scorer.py
src/vulntriage/webapp/: __init__.py  app.py  runs.py
src/vulntriage/webapp/static/: app.js  style.css
src/vulntriage/webapp/templates/: base.html  dashboard.html  eval_detail.html  eval_list.html  eval_new.html  run_detail.html  run_new.html  runs_list.html
tests/: conftest.py  test_cli.py  test_cli_ensemble.py  test_evaluation.py  test_parser.py  test_pipeline.py  test_pipeline_integration.py  test_remediator.py  test_report_composer.py  test_scorer_ensemble.py  test_scorer_fewshot.py  test_webapp.py  test_webapp_models_ensemble.py
