[project]
name = "vulntriage"
version = "1.0.0"
description = "LLM-enabled vulnerability investigation and triaging system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13",
    "openai>=2.44",
    "pyyaml>=6.0",
    "jinja2>=3.1.6",
    "weasyprint>=69.0",
    "scipy>=1.18.0",
    "matplotlib>=3.11.0",
    "fastapi>=0.139",
    "uvicorn>=0.50",
    "python-multipart>=0.0.18",
]

[project.scripts]
vulntriage = "vulntriage.cli:main"
vulntriage-web = "vulntriage.webapp.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulntriage"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
]
