[project]
name = "vulntriage"
version = "1.0.0"
description = "LLM-enabled vulnerability investigation and triaging system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2,<3",
    "openai>=2,<3",
    "pyyaml>=6,<7",
    "jinja2>=3,<4",
    "weasyprint>=69,<70",
    "scipy>=1,<2",
    "fastapi>=0,<1",
    "uvicorn>=0,<1",
    "python-multipart>=0,<1",
]

[project.scripts]
vulntriage = "vulntriage.cli:main"
vulntriage-web = "vulntriage.webapp.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulntriage"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "pytest-mock>=3,<4",
    "httpx>=0,<1",
]
