[project]
name = "vulntriage"
version = "1.0.0"
description = "LLM-enabled vulnerability investigation and triaging system"
readme = "README.md"
requires-python = ">=3.14,<3.16"
dependencies = [
    "pydantic==2.13.*",
    "openai==2.45.*",
    "pyyaml==6.0.*",
    "jinja2==3.1.*",
    "weasyprint==69.*",
    "scipy==1.18.*",
    "fastapi==0.139.*",
    "uvicorn==0.51.*",
    "python-multipart==0.0.32",
]

[project.scripts]
vulntriage = "vulntriage.cli:main"
vulntriage-web = "vulntriage.webapp.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vulntriage"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[dependency-groups]
dev = [
    "pytest==9.1.*",
    "pytest-cov==7.1.*",
    "pytest-mock==3.15.*",
    "httpx==0.28.*",
]
